# Automated-Farmer

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
backend/: auth_utils.py  db.py  main.py  models.py  requirements.txt
backend/routes/: auth.py
db/: game_data.db-shm  game_data.db-wal  game_db.py  queries.sql  schema.sql
pygame/: api_client.py  auth_ui.py  background.py  crop.py  debug.py  farmer.py  ide.py  level.py  main.py  objective.py  overlay.py  tempCodeRunnerFile.py  tile.py  timeout_execution.py  ui_scale.py  unlock_screen.py  unlock_tree.py
scripts/: Farmer.cpp  Farmer.hpp  Grid.cpp  Grid.hpp  Tile.hpp
src/: main.cpp
